Fix Compilation Errors and Add New Features