@@ -1,112 +1,120 @@
-package me.moiz.pakduels.listeners;
+package me.moiz.pakduels.managers;
 
+import fr.mrmicky.fastboard.FastBoard;
 import me.moiz.pakduels.PakDuelsPlugin;
-import me.moiz.pakduels.guis.ArenaEditorGui;
-import me.moiz.pakduels.guis.ArenaListGui;
-import me.moiz.pakduels.guis.KitEditorGui;
-import me.moiz.pakduels.models.Arena;
-import me.moiz.pakduels.utils.MessageUtils;
+import me.moiz.pakduels.models.Duel;
+import org.bukkit.configuration.file.YamlConfiguration;
 import org.bukkit.entity.Player;
-import org.bukkit.event.EventHandler;
-import org.bukkit.event.Listener;
-import org.bukkit.event.block.Action;
-import org.bukkit.event.inventory.InventoryClickEvent;
-import org.bukkit.event.player.PlayerInteractEvent;
-import org.bukkit.inventory.Inventory;
 
+import java.io.File;
+import java.io.IOException;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
-public class GuiListener implements Listener {
+public class ScoreboardManager {
     private final PakDuelsPlugin plugin;
+    private final Map<Player, FastBoard> boards;
     
-    public GuiListener(PakDuelsPlugin plugin) {
+    public ScoreboardManager(PakDuelsPlugin plugin) {
         this.plugin = plugin;
+        this.boards = new HashMap<>();
     }
     
-    @EventHandler
-    public void onInventoryClick(InventoryClickEvent event) {
-        if (!(event.getWhoClicked() instanceof Player player)) return;
+    public void setupDuelScoreboard(Duel duel) {
+        Player player1 = duel.getPlayer1();
+        Player player2 = duel.getPlayer2();
         
-        Inventory inventory = event.getInventory();
-        String title = event.getView().getTitle();
+        FastBoard board1 = new FastBoard(player1);
+        FastBoard board2 = new FastBoard(player2);
         
-        if (title.equals("Arena Manager")) {
-            event.setCancelled(true);
-            handleArenaListClick(player, event.getSlot());
-        } else if (title.startsWith("Arena Editor: ")) {
-            event.setCancelled(true);
-            ArenaEditorGui gui = plugin.getGuiManager().getArenaEditorGui(player);
-            if (gui != null) {
-                gui.handleClick(event.getSlot());
-            }
-        } else if (title.startsWith("Kit Editor: ")) {
-            event.setCancelled(true);
-            KitEditorGui gui = plugin.getGuiManager().getKitEditorGui(player);
-            if (gui != null) {
-                gui.handleClick(event.getSlot());
-            }
-        }
+        boards.put(player1, board1);
+        boards.put(player2, board2);
+        
+        updateDuelScoreboard(duel);
     }
     
-    private void handleArenaListClick(Player player, int slot) {
-        if (slot == 49) {
-            player.closeInventory();
-            return;
-        }
+    public void updateDuelScoreboard(Duel duel) {
+        Player player1 = duel.getPlayer1();
+        Player player2 = duel.getPlayer2();
         
-        // Calculate arena index based on slot position
-        int row = slot / 9;
-        int col = slot % 9;
+        FastBoard board1 = boards.get(player1);
+        FastBoard board2 = boards.get(player2);
         
-        if (row < 1 || row > 4 || col < 1 || col > 7) {
-            return; // Invalid slot
-        }
-        
-        int arenaIndex = (row - 1) * 7 + (col - 1);
-        List<Arena> arenas = plugin.getArenaManager().getAllArenas().stream().toList();
-        
-        if (arenaIndex >= 0 && arenaIndex < arenas.size()) {
-            Arena arena = arenas.get(arenaIndex);
-            player.closeInventory();
-            plugin.getGuiManager().openArenaEditorGUI(player, arena);
+        if (board1 != null && board2 != null) {
+            String title = plugin.getConfigManager().getScoreboardTitle();
+            List<String> lines = plugin.getConfigManager().getScoreboardLines();
+            
+            // Process placeholders for player1's board
+            List<String> processedLines1 = lines.stream()
+                .map(line -> processPlaceholders(line, duel, player1))
+                .collect(Collectors.toList());
+            
+            // Process placeholders for player2's board
+            List<String> processedLines2 = lines.stream()
+                .map(line -> processPlaceholders(line, duel, player2))
+                .collect(Collectors.toList());
+            
+            board1.updateTitle(colorize(title));
+            board1.updateLines(processedLines1.stream().map(this::colorize).collect(Collectors.toList()));
+            
+            board2.updateTitle(colorize(title));
+            board2.updateLines(processedLines2.stream().map(this::colorize).collect(Collectors.toList()));
         }
     }
     
-    @EventHandler
-    public void onPlayerInteract(PlayerInteractEvent event) {
-        Player player = event.getPlayer();
-        ArenaEditorGui gui = plugin.getGuiManager().getArenaEditorGui(player);
+    private String processPlaceholders(String line, Duel duel, Player viewer) {
+        Player opponent = duel.getOpponent(viewer);
+        int viewerScore = viewer.equals(duel.getPlayer1()) ? duel.getPlayer1Score() : duel.getPlayer2Score();
+        int opponentScore = viewer.equals(duel.getPlayer1()) ? duel.getPlayer2Score() : duel.getPlayer1Score();
         
-        if (gui != null && gui.getEditMode() != ArenaEditorGui.EditMode.NONE) {
-            if (event.getAction() == Action.RIGHT_CLICK_BLOCK || event.getAction() == Action.LEFT_CLICK_BLOCK) {
-                event.setCancelled(true);
-                
-                Arena arena = gui.getArena();
-                
-                switch (gui.getEditMode()) {
-                    case POSITION_1:
-                        arena.setPosition1(event.getClickedBlock().getLocation());
-                        MessageUtils.sendMessage(player, "&aArena Position 1 set!");
-                        break;
-                    case POSITION_2:
-                        arena.setPosition2(event.getClickedBlock().getLocation());
-                        MessageUtils.sendMessage(player, "&aArena Position 2 set!");
-                        break;
-                    case SPAWN_1:
-                        arena.setSpawnPoint1(event.getClickedBlock().getLocation().add(0.5, 1, 0.5));
-                        MessageUtils.sendMessage(player, "&aSpawn Point 1 set!");
-                        break;
-                    case SPAWN_2:
-                        arena.setSpawnPoint2(event.getClickedBlock().getLocation().add(0.5, 1, 0.5));
-                        MessageUtils.sendMessage(player, "&aSpawn Point 2 set!");
-                        break;
-                }
-                
-                gui.setEditMode(ArenaEditorGui.EditMode.NONE);
-                plugin.getArenaManager().saveArena(arena);
-                gui.refresh();
-                gui.open();
-            }
+        return line
+            .replace("{player1}", duel.getPlayer1().getName())
+            .replace("{player2}", duel.getPlayer2().getName())
+            .replace("{score1}", String.valueOf(duel.getPlayer1Score()))
+            .replace("{score2}", String.valueOf(duel.getPlayer2Score()))
+            .replace("{kit}", duel.getKit().getName())
+            .replace("{round}", String.valueOf(duel.getCurrentRound()))
+            .replace("{maxrounds}", String.valueOf(duel.getMaxRounds()))
+            .replace("{state}", getStateDisplay(duel.getState()));
+    }
+    
+    private String getStateDisplay(Duel.DuelState state) {
+        switch (state) {
+            case WAITING: return "Waiting";
+            case STARTING: return "Starting";
+            case INVENTORY_COUNTDOWN: return "Organizing";
+            case IN_PROGRESS: return "Fighting";
+            case ROUND_ENDING: return "Round End";
+            case FINISHED: return "Finished";
+            default: return "Unknown";
         }
+    }
+    
+    private String colorize(String text) {
+        return text.replace("&", "§");
+    }
+    
+    public void removeDuelScoreboard(Duel duel) {
+        Player player1 = duel.getPlayer1();
+        Player player2 = duel.getPlayer2();
+        
+        FastBoard board1 = boards.remove(player1);
+        FastBoard board2 = boards.remove(player2);
+        
+        if (board1 != null) {
+            board1.delete();
+        }
+        if (board2 != null) {
+            board2.delete();
+        }
+    }
+    
+    public void cleanup() {
+        for (FastBoard board : boards.values()) {
+            board.delete();
+        }
+        boards.clear();
     }
 }
